--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -22,6 +22,12 @@ $main-color: #89c0eb;
             height: 100vh;
             background-color: $main-color;
 
+            .logo{
+                img{
+                    width: 100px;
+                }
+            }
+
             h2{
                 font-size: 20px;
                 margin-bottom: 20px;
@@ -131,13 +137,13 @@ $main-color: #89c0eb;
         //HOME PAGE
         .home{
 
-            .posts{
+            .posts_home{
                 margin-top: 50px;
                 display: flex;
                 flex-direction: column;
                 gap: 150px;
 
-                .post {
+                .post_home {
                     display: flex;
                     gap: 100px;
 
@@ -218,7 +224,7 @@ $main-color: #89c0eb;
                     object-fit: cover;
                 }
                 
-                .user {
+                .user_item {
                     display: flex;
                     align-items: center;
                     gap: 10px;
@@ -370,21 +376,22 @@ $main-color: #89c0eb;
                   color: #555;
                 }
         
-                .post {  
+                .post_menu {  
                     display: flex;
                     flex-direction: column;
-                    gap: 10px;
         
                     img {
                         width: 100%;
                         height: 200px;
                         object-fit: cover;
+                        
                     }
                     h2 {
                         color: #555;
                     }
         
                     button {
+                      margin-top: -20px;
                         width: max-content;
                         padding: 7.5px 15px;
                         border: none;
@@ -403,73 +410,75 @@ $main-color: #89c0eb;
             }
         }    
     
-// ADD PAGE
-.add-item-page {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
+        // ADD PAGE
+        .add-item-page {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            
+            .add-item-form {
+              background: #f8f8f8;
+              padding: 20px;
+              border-radius: 8px;
+              box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+              max-width: 600px;
+              width: 100%;
+              
+              .form-group {
+                margin-bottom: 20px;
+          
+                label {
+                  display: block;
+                  font-weight: 600;
+                  margin-bottom: 8px;
+                  color: #333;
+                }
+          
+                .form-input {
+                  width: 100%;
+                  padding: 10px;
+                  margin-right: 10px;
+                  border: 1px solid lightgray;
+                  border-radius: 4px;
+                  font-size: 14px;
+          
+                  &.textarea {
+                    height: 100px;
+                    resize: vertical;
+                  }
+          
+                  &.select {
+                    background: white;
+                  }
+          
+                  &.file-input {
+                    border: none;
+                  }
+                }
+              }
+          
+              .form-actions {
+                display: flex;
+                justify-content: flex-end;
+          
+                .btn-submit {
+                  background-color: teal;
+                  color: white;
+                  padding: 10px 20px;
+                  border: none;
+                  border-radius: 4px;
+                  cursor: pointer;
+                  transition: background-color 0.3s ease;
+          
+                  &:hover {
+                    background-color: darkcyan;
+                  }
+                }
+              }
+            }
+          }
     
-    .add-item-form {
-      background: #f8f8f8;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      width: 100%;
-      
-      .form-group {
-        margin-bottom: 20px;
-  
-        label {
-          display: block;
-          font-weight: 600;
-          margin-bottom: 8px;
-          color: #333;
         }
-  
-        .form-input {
-          width: 100%;
-          padding: 10px;
-          border: 1px solid lightgray;
-          border-radius: 4px;
-          font-size: 14px;
-  
-          &.textarea {
-            height: 100px;
-            resize: vertical;
-          }
-  
-          &.select {
-            background: white;
-            appearance: none;
-          }
-  
-          &.file-input {
-            border: none;
-          }
-        }
+
       }
-  
-      .form-actions {
-        display: flex;
-        justify-content: flex-end;
-  
-        .btn-submit {
-          background-color: teal;
-          color: white;
-          padding: 10px 20px;
-          border: none;
-          border-radius: 4px;
-          cursor: pointer;
-          transition: background-color 0.3s ease;
-  
-          &:hover {
-            background-color: darkcyan;
-          }
-        }
-      }
-    }
-  }
-  
-    }
-}
+    
